# ScreammOS

./: Cargo.toml  README.md  link.ld  run_qemu.bat  run_qemu_debug.bat  x86_64-screamos.json
.cargo/: config.toml
src/: error_handler.rs  fs.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  logger.rs  main.rs  memory.rs  queue.rs  simple_fs.rs  string_ext.rs  vga_buffer.rs
src/ui/: command_line.rs  file_manager.rs  mod.rs  retro_commands.rs  splash_screen.rs  text_editor.rs  window_manager.rs
src/ui/window_manager/: mod.rs
src/vga_buffer/: mod.rs
