[package]
name = "screamos"
version = "0.1.0"
edition = "2021"
authors = ["ScreammOS Team"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
